--- a/chocolate.html
+++ b/chocolate.html
@@ -1,104 +1,90 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>Chocolate Home</title>
-	<link rel="stylesheet" type="text/css" href="chocolate.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Chocolate Home</title>
+  <link rel="stylesheet" type="text/css" href="chocolate.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
 
 <!-- Page content -->
 <body>
-
 <!-- Side navigation -->
- <div class="sidenav">
-   <a href="https://en.wikipedia.org/wiki/Chocolate"><img src="./images/chocologo.png" width="125" height="125" alt="Chocolate Logo - Links to Wikipedia page"></a>
-   <a href="#">Home</a>
-   <a href="#">History</a>
-   <a href="#">How it's Made</a>
- </div>
+  <div class="sidenav">
+    <a href="https://en.wikipedia.org/wiki/Chocolate"><img src="./images/chocologo.png" width="125" height="125" alt="Chocolate Logo - Links to Wikipedia page"></a>
+    <a href="#">Home</a>
+    <a href="#">History</a>
+    <a href="#">How it's Made</a>
+  </div>
 
- <!-- Title -->
- <div class="main">
-	<h1><a href="https://en.wikipedia.org/wiki/Chocolate"> Chocolate </a></h1>
-  
- 
+  <!-- Title -->
+  <div class="main">
+    <h1><a href="https://en.wikipedia.org/wiki/Chocolate"> Chocolate </a></h1>
+   
   <!-- Paragraph text -->
   <div style="width:100%;border:1px solid gray;padding:8px;background:#B3540C">
-	<div class="newspaper">
-	Chocolate is a usually sweet, brown food preparation of roasted and ground 
-	cacao seeds that is made in the form of a liquid, paste, or in a block, or used as a flavoring 
-	ingredient in other foods. The earliest evidence of use traces to the Olmecs (modern day Mexico), 
-	with evidence of chocolate beverages dating to 1900 BC. The majority of Mesoamerican people 
-	made chocolate beverages, including the Maya and Aztecs. The word "chocolate" is derived from the 
-	Classical Nahuatl word chocolātl.<br>The seeds of the cacao tree have an intense bitter taste and must be fermented to develop the flavor. After fermentation, the beans are dried, cleaned, and roasted. The shell is removed to produce cacao nibs, which are then ground to cocoa mass, unadulterated chocolate in rough form. Once the cocoa mass is liquefied by heating, it is called chocolate liquor. The liquor may also be cooled and processed into its two components: cocoa solids and cocoa butter. <br>Baking chocolate, also called bitter chocolate, contains cocoa solids and cocoa butter in varying proportions, without any added sugar. Powdered baking cocoa, which contains more fiber than it contains cocoa butter, can be processed with alkali to produce dutch cocoa. Much of the chocolate consumed today is in the form of sweet chocolate, a combination of cocoa solids, cocoa butter or added vegetable oils, and sugar. Milk chocolate is sweet chocolate that additionally contains milk powder or condensed milk. White chocolate contains cocoa butter, sugar, and milk, but no cocoa solids.<br>Chocolate is one of the most popular food types and flavors in the world, and many foodstuffs involving chocolate exist, particularly desserts, including cakes, pudding, mousse, chocolate brownies, and chocolate chip cookies. Many candies are filled with or coated with sweetened chocolate. Chocolate bars, either made of solid chocolate or other ingredients coated in chocolate, are eaten as snacks. Gifts of chocolate molded into different shapes (such as eggs, hearts, coins) are traditional on certain Western holidays, including Christmas, Easter, Valentine's Day, and Hanukkah. Chocolate is also used in cold and hot beverages, such as chocolate milk and hot chocolate, and in some alcoholic drinks, such as creme de cacao.<br>Although cocoa originated in the Americas, West African countries, particularly Cote d'Ivoire and Ghana, are the leading producers of cocoa in the 21st century, accounting for some 60% of the world cocoa supply.<br>With some two million children involved in the farming of cocoa in West Africa, child slavery and trafficking were major concerns in 2018. However, international attempts to improve conditions for children were failing because of persistent poverty, absence of schools, increasing world cocoa demand, more intensive farming of cocoa, and continued exploitation of child labor.
-	</div>
+    <div class="newspaper">
+    Chocolate is a usually sweet, brown food preparation of roasted and ground cacao seeds that is made in the form of a liquid, paste, or in a block, or used as a flavoring ingredient in other foods. The earliest evidence of use traces to the Olmecs (modern day Mexico), with evidence of chocolate beverages dating to 1900 BC. The majority of Mesoamerican people made chocolate beverages, including the Maya and Aztecs. The word "chocolate" is derived from the Classical Nahuatl word chocolatl.<br>The seeds of the cacao tree have an intense bitter taste and must be fermented to develop the flavor. After fermentation, the beans are dried, cleaned, and roasted. The shell is removed to produce cacao nibs, which are then ground to cocoa mass, unadulterated chocolate in rough form. Once the cocoa mass is liquefied by heating, it is called chocolate liquor. The liquor may also be cooled and processed into its two components: cocoa solids and cocoa butter. <br>Baking chocolate, also called bitter chocolate, contains cocoa solids and cocoa butter in varying proportions, without any added sugar. Powdered baking cocoa, which contains more fiber than it contains cocoa butter, can be processed with alkali to produce dutch cocoa. Much of the chocolate consumed today is in the form of sweet chocolate, a combination of cocoa solids, cocoa butter or added vegetable oils, and sugar. Milk chocolate is sweet chocolate that additionally contains milk powder or condensed milk. White chocolate contains cocoa butter, sugar, and milk, but no cocoa solids.<br>Chocolate is one of the most popular food types and flavors in the world, and many foodstuffs involving chocolate exist, particularly desserts, including cakes, pudding, mousse, chocolate brownies, and chocolate chip cookies. Many candies are filled with or coated with sweetened chocolate. Chocolate bars, either made of solid chocolate or other ingredients coated in chocolate, are eaten as snacks. Gifts of chocolate molded into different shapes (such as eggs, hearts, coins) are traditional on certain Western holidays, including Christmas, Easter, Valentine's Day, and Hanukkah. Chocolate is also used in cold and hot beverages, such as chocolate milk and hot chocolate, and in some alcoholic drinks, such as creme de cacao.<br>Although cocoa originated in the Americas, West African countries, particularly Cote d'Ivoire and Ghana, are the leading producers of cocoa in the 21st century, accounting for some 60% of the world cocoa supply.<br>With some two million children involved in the farming of cocoa in West Africa, child slavery and trafficking were major concerns in 2018. However, international attempts to improve conditions for children were failing because of persistent poverty, absence of schools, increasing world cocoa demand, more intensive farming of cocoa, and continued exploitation of child labor.
+    </div>
   
-	
-	<!-- Slideshow container -->
-	<div class="slideshow-container">
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+      <!-- Full-width images with number and caption text -->
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="./images/chocohome.jpg" style="width:100%" alt="Types of Chocolate">
+        <div class="slidetext centered">Chocolate most commonly comes in dark, milk, and white varieties</div>
+      </div>
+      <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img src="./images/chocofilling.jpg" style="width:100%" alt="Chocolate Fillings">
+        <div class="slidetext centered">Chocolate with various fillings</div>
+      </div>
+      <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img src="./images/chococake.jpg" style="width:100%" alt="Chocolate Cake">
+        <div class="slidetext centered">Chocolate cake with chocolate frosting</div>
+      </div>
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+    </div>  
+  </div>
+  <script>
+    var slideIndex = 1;
+      showSlides(slideIndex);
 
-		<!-- Full-width images with number and caption text -->
-		<div class="mySlides fade">
-			<div class="numbertext">1 / 3</div>
-			<img src="./images/chocohome.jpg" style="width:100%" alt="Types of Chocolate">
-			<div class="slidetext centered">Chocolate most commonly comes in dark, milk, and white varieties</div>
-		</div>
+    function plusSlides(n) {
+      showSlides(slideIndex += n);
+    }
 
-		<div class="mySlides fade">
-			<div class="numbertext">2 / 3</div>
-			<img src="./images/chocofilling.jpg" style="width:100%" alt="Chocolate Fillings">
-			<div class="slidetext centered">Chocolate with various fillings</div>
-		</div>
+    function currentSlide(n) {
+      showSlides(slideIndex = n);
+    }
 
-		<div class="mySlides fade">
-			<div class="numbertext">3 / 3</div>
-			<img src="./images/chococake.jpg" style="width:100%" alt="Chocolate Cake">
-			<div class="slidetext centered">Chocolate cake with chocolate frosting</div>
-		</div>
-
-		<!-- Next and previous buttons -->
-		<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-		<a class="next" onclick="plusSlides(1)">&#10095;</a>
-	</div>
-	<br>
-
-	<!-- The dots/circles -->
-	<div style="text-align:center">
-		<span class="dot" onclick="currentSlide(1)"></span>
-		<span class="dot" onclick="currentSlide(2)"></span>
-		<span class="dot" onclick="currentSlide(3)"></span>
-	</div>  
- </div>
- <script>
-var slideIndex = 1;
-showSlides(slideIndex);
-
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}    
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";  
-  }
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-}
+    function showSlides(n) {
+      var i;
+      var slides = document.getElementsByClassName("mySlides");
+      var dots = document.getElementsByClassName("dot");
+      if (n > slides.length) {slideIndex = 1}    
+      if (n < 1) {slideIndex = slides.length}
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";  
+      }
+      for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex-1].style.display = "block";  
+      dots[slideIndex-1].className += " active";
+    }
  </script>
  </div>
 </body>
