--- a/chocolatehome.html
+++ b/chocolatehome.html
@@ -13,8 +13,8 @@
 <!-- Side navigation -->
   <div class="sidenav">
     <a href="https://en.wikipedia.org/wiki/Chocolate"><img src="./images/chocologo.png" width="125" height="125" alt="Chocolate Logo - Links to Wikipedia page"></a>
-    <a href="#">Home</a>
-    <a href="#">History</a>
+    <a href="chocolatehome.html">Home</a>
+    <a href="chocolatehistory.html">History</a>
     <a href="#">How it's Made</a>
   </div>
 
