added new page and bootstrap

--- a/chocolatehistory.html
+++ b/chocolatehistory.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Chocolate History</title>
+  <link href="bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="chocolate.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -13,7 +14,7 @@
     <a href="https://en.wikipedia.org/wiki/Chocolate"><img src="./images/chocologo.png" width="125" height="125" alt="Chocolate Logo - Links to Wikipedia page"></a>
     <a href="chocolatehome.html">Home</a>
     <a href="chocolatehistory.html">History</a>
-    <a href="#">How it's Made</a>
+    <a href="chocolateproduction.html">How it's Made</a>
   </div>
 
   <div class="main">
@@ -24,8 +25,8 @@
       Chocolate has been prepared as a drink for nearly all of its history. For example, one vessel found at an Olmec archaeological site on the Gulf Coast of Veracruz, Mexico, dates chocolate's preparation by pre-Olmec peoples as early as 1750 BC. On the Pacific coast of Chiapas, Mexico, a Mokaya archaeological site provides evidence of cacao beverages dating even earlier, to 1900 BC. The residues and the kind of vessel in which they were found indicate the initial use of cacao was not simply as a beverage, but the white pulp around the cacao beans was likely used as a source of fermentable sugars for an alcoholic drink.<br><br>An early Classic-period (460–480 AD) Mayan tomb from the site in Rio Azul had vessels with the Maya glyph for cacao on them with residue of a chocolate drink, suggests the Maya were drinking chocolate around 400 AD. Documents in Maya hieroglyphs stated chocolate was used for ceremonial purposes, in addition to everyday life. The Maya grew cacao trees in their backyards, and used the cacao seeds the trees produced to make a frothy, bitter drink.<br><br>By the 15th century, the Aztecs gained control of a large part of Mesoamerica and adopted cacao into their culture. They associated chocolate with Quetzalcoatl, who, according to one legend, was cast away by the other gods for sharing chocolate with humans, and identified its extrication from the pod with the removal of the human heart in sacrifice. In contrast to the Maya, who liked their chocolate warm, the Aztecs drank it cold, seasoning it with a broad variety of additives, including the petals of the Cymbopetalum penduliflorum tree, chile pepper, allspice, vanilla, and honey.<br><br>The Aztecs were unable to grow cacao themselves, as their home in the Mexican highlands was unsuitable for it, so chocolate was a luxury imported into the empire. Those who lived in areas ruled by the Aztecs were required to offer cacao seeds in payment of the tax they deemed "tribute". Cocoa beans were often used as currency. For example, the Aztecs used a system in which one turkey cost 100 cacao beans and one fresh avocado was worth three beans.<br><br>The Maya and Aztecs associated cacao with human sacrifice, and chocolate drinks specifically with sacrificial human blood. The Spanish royal chronicler Gonzalo Fernández de Oviedo described a chocolate drink he had seen in Nicaragua in 1528, mixed with achiote: "because those people are fond of drinking human blood, to make this beverage seem like blood, they add a little achiote, so that it then turns red. ... and part of that foam is left on the lips and around the mouth, and when it is red for having achiote, it seems a horrific thing, because it seems like blood itself."
 	  </div>
 	  <br>
-	  <img src="./images/meso1.jpg" alt="Maya painting" style="width:50%">
-		<div>A Maya lord forbids an individual from touching a container of chocolate</div>
+	  <img src="./images/meso1.jpg" alt="Maya painting" class="img-fluid rounded-circle" style="width:50%">
+		<h5>A Maya lord forbids an individual from touching a container of chocolate</h5><br>
       <h2>European Adaptation</h2>
 	  <div class="newspaper">
       Until the 16th century, no European had ever heard of the popular drink from the Central American peoples. Christopher Columbus and his son Ferdinand encountered the cacao bean on Columbus's fourth mission to the Americas on 15 August 1502, when he and his crew seized a large native canoe that proved to contain cacao beans among other goods for trade. Spanish conquistador Hernán Cortés may have been the first European to encounter it, as the frothy drink was part of the after-dinner routine of Montezuma. Jose de Acosta, a Spanish Jesuit missionary who lived in Peru and then Mexico in the later 16th century, wrote of its growing influence on the Spaniards:
