bootstrap layout change

--- a/chocolateproduction.html
+++ b/chocolateproduction.html
@@ -25,39 +25,57 @@
       Roughly two-thirds of the entire world's cocoa is produced in West Africa, with 43% sourced from Côte d'Ivoire, where, as of 2007, child labor is a common practice to obtain the product. According to the World Cocoa Foundation, in 2007 some 50 million people around the world depended on cocoa as a source of livelihood. As of 2007 in the UK, most chocolatiers purchase their chocolate from them, to melt, mold and package to their own design. According to the WCF's 2012 report, the Ivory Coast is the largest producer of cocoa in the world. The two main jobs associated with creating chocolate candy are chocolate makers and chocolatiers. Chocolate makers use harvested cacao beans and other ingredients to produce couverture chocolate (covering). Chocolatiers use the finished couverture to make chocolate candies (bars, truffles, etc.).<br><br>Production costs can be decreased by reducing cocoa solids content or by substituting cocoa butter with another fat. Cocoa growers object to allowing the resulting food to be called "chocolate", due to the risk of lower demand for their crops.
 	  </div>
 	  <br>
-	  <h3>Genome</h3>
-	  <div>
-	  The sequencing in 2010 of the genome of the cacao tree may allow yields to be improved. Due to concerns about global warming effects on lowland climate in the narrow band of latitudes where cacao is grown (20 degrees north and south of the equator), the commercial company Mars, Incorporated and the University of California, Berkeley are conducting genomic research in 2017–18 to improve the survivability of cacao plants in hot climates.
+	<div class="container" id="services">
+	  <div class="row row-cols-3">
+		<article class="col">
+		  <h3>Genome</h3>
+	      <div>
+	      The sequencing in 2010 of the genome of the cacao tree may allow yields to be improved. Due to concerns about global warming effects on lowland climate in the narrow band of latitudes where cacao is grown (20 degrees north and south of the equator), the commercial company Mars, Incorporated and the University of California, Berkeley are conducting genomic research in 2017–18 to improve the survivability of cacao plants in hot climates.
+	      </div>
+		  <img src="./images/Cacao.jpg" alt="Cacao Beans" style="width:100%">
+		  <h5>Toasted cacao beans at a chocolate workshop at the La Chonita Hacienda in Tabasco.</h5>
+		</article>
+		<article class="col">
+		  <h3>Cacao varieties</h3>
+	      <div>
+	      Chocolate is made from cocoa beans, the dried and fermented seeds of the cacao tree. Recent studies suggest the most common genotype of the plant originated in the Amazon and was later transported by humans throughout South and Central America. The scientific name, Theobroma, means "food of the gods".<br><br>Cacao trees naturally grow within 20° of either side of the equator because they need about 2000 mm of rainfall a year, and temperatures in the range of 21 to 32 °C. Cacao trees cannot tolerate a temperature lower than 15 °C. The three main varieties of cacao beans used in chocolate are criollo, forastero, and trinitario.
+	      </div>
+		</article>
+		<article class="col">
+		  <h3>Criollo</h3>
+	      <div>
+	      Representing only 5% of all cocoa beans grown as of 2008, criollo is the rarest and most expensive cocoa on the market, and is native to Central America, the Caribbean islands and the northern tier of South American states. The genetic purity of cocoas sold today as criollo is disputed, as most populations have been exposed to the genetic influence of other varieties.<br><br>Criollos are particularly difficult to grow, as they are vulnerable to a variety of environmental threats and produce low yields of cocoa per tree. The flavor of criollo is described as delicate yet complex, low in classic chocolate flavor, but rich in "secondary" notes of long duration.
+	      </div><br>
+		</article>
+		<article class="col">
+		  <h3>Forastero</h3>
+	      <div>
+	      The most commonly grown bean is forastero, a large group of wild and cultivated cacaos, most likely native to the Amazon basin. The African cocoa crop is entirely of the forastero variety. They are significantly hardier and of higher yield than criollo. The source of most chocolate marketed, forastero cocoas are typically strong in classic "chocolate" flavor, but have a short duration and are unsupported by secondary flavors, producing "quite bland" chocolate.
+	      </div>
+		</article>
+		<article class="col">
+		  <h3>Trinitario</h3>
+	      <div>
+	      Trinitario is a natural hybrid of criollo and forastero. Trinitario originated in Trinidad after an introduction of forastero to the local criollo crop. Nearly all cacao produced over the past five decades is of the forastero or lower-grade trinitario varieties.
+	      </div>
+		  <img src="./images/chocodancer.jpg" alt="'Dancing the cocoa'" style="width:100%">
+		  <h5>Image of woman "Dancing the cocoa", El Cidros, Trinidad, c. 1957.</h5>
+		</article>
+		<article class="col">
+		  <h3>Conching</h3>
+	      <div>
+	      A conche is a container filled with metal beads, which act as grinders. The refined and blended chocolate mass is kept in a liquid state by frictional heat. Chocolate prior to conching has an uneven and gritty texture. The length of the conching process determines the final smoothness and quality of the chocolate. High-quality chocolate is conched for about 72 hours, and lesser grades about four to six hours. After the process is complete, the chocolate mass is stored in tanks heated to about 45 to 50 °C until final processing.
+	      </div>
+		</article>
 	  </div>
-	  <br>
-	  <h3>Cacao varieties</h3>
-	  <div>
-	  Chocolate is made from cocoa beans, the dried and fermented seeds of the cacao tree (Theobroma cacao), a small, 4–8 m tall (15–26 ft tall) evergreen tree native to the deep tropical region of the Americas. Recent genetic studies suggest the most common genotype of the plant originated in the Amazon basin and was gradually transported by humans throughout South and Central America. Early forms of another genotype have also been found in what is now Venezuela. The scientific name, Theobroma, means "food of the gods". The fruit, called a cacao pod, is ovoid, 15–30 cm (6–12 in) long and 8–10 cm (3–4 in) wide, ripening yellow to orange, and weighing about 500 g (1.1 lb) when ripe.<br><br>Cacao trees are small, understory trees that need rich, well-drained soils. They naturally grow within 20° of either side of the equator because they need about 2000 mm of rainfall a year, and temperatures in the range of 21 to 32 °C (70 to 90 °F). Cacao trees cannot tolerate a temperature lower than 15 °C (59 °F).<br><br>The three main varieties of cacao beans used in chocolate are criollo, forastero, and trinitario.
-	  </div>
-	  <img src="./images/Cacao.jpg" alt="Cacao Beans" style="width:50%">
-		<h5>Toasted cacao beans at a chocolate workshop at the La Chonita Hacienda in Tabasco.</h5>
-	  <br>
-	  <h3>Criollo</h3>
-	  <div>
-	  Representing only 5% of all cocoa beans grown as of 2008, criollo is the rarest and most expensive cocoa on the market, and is native to Central America, the Caribbean islands and the northern tier of South American states. The genetic purity of cocoas sold today as criollo is disputed, as most populations have been exposed to the genetic influence of other varieties.<br><br>Criollos are particularly difficult to grow, as they are vulnerable to a variety of environmental threats and produce low yields of cocoa per tree. The flavor of criollo is described as delicate yet complex, low in classic chocolate flavor, but rich in "secondary" notes of long duration.
-	  </div>
-	  <br>
-	  <h3>Forastero</h3>
-	  <div>
-	  The most commonly grown bean is forastero, a large group of wild and cultivated cacaos, most likely native to the Amazon basin. The African cocoa crop is entirely of the forastero variety. They are significantly hardier and of higher yield than criollo. The source of most chocolate marketed, forastero cocoas are typically strong in classic "chocolate" flavor, but have a short duration and are unsupported by secondary flavors, producing "quite bland" chocolate.
-	  </div>
-	  <br>
-	  <h3>Trinitario</h3>
-	  <div>
-	  Trinitario is a natural hybrid of criollo and forastero. Trinitario originated in Trinidad after an introduction of forastero to the local criollo crop. Nearly all cacao produced over the past five decades is of the forastero or lower-grade trinitario varieties.
-	  </div>
-	  <img src="./images/chocodancer.jpg" alt="'Dancing the cocoa'" style="width:25%">
-		<h5>Image of woman "Dancing the cocoa", El Cidros, Trinidad, c. 1957.</h5>
+	</div>
 	  <br>
 	  <h3>Processing</h3>
 	  <div>
 	  Cacao pods are harvested by cutting them from the tree using a machete, or by knocking them off the tree using a stick. The beans with their surrounding pulp are removed from the pods and placed in piles or bins, allowing access to micro-organisms so fermentation of the pectin-containing material can begin. Yeasts produce ethanol, lactic acid bacteria produce lactic acid, and acetic acid bacteria produce acetic acid. The fermentation process, which takes up to seven days, also produces several flavor precursors, eventually resulting in the familiar chocolate taste.<br><br>It is important to harvest the pods when they are fully ripe, because if the pod is unripe, the beans will have a low cocoa butter content, or sugars in the white pulp will be insufficient for fermentation, resulting in a weak flavor. After fermentation, the beans must be quickly dried to prevent mold growth. Climate and weather permitting, this is done by spreading the beans out in the sun from five to seven days.<br><br>The dried beans are then transported to a chocolate manufacturing facility. The beans are cleaned (removing twigs, stones, and other debris), roasted, and graded. Next, the shell of each bean is removed to extract the nib. Finally, the nibs are ground and liquefied, resulting in pure chocolate in fluid form: chocolate liquor. The liquor can be further processed into two components: cocoa solids and cocoa butter.
 	  </div>
+	  <img src="./images/Chocomixer.jpg" alt="Chocolate Mixing" class="img-fluid rounded-circle" style="width:50%">
+		<h5>Chocolate melanger mixing raw ingredients</h5><br>
 	  <br>
 	  <h3>Blending</h3>
 	  The basic blends of ingredients for the various types of chocolate (in order of highest quantity of cocoa liquor), are:
@@ -66,18 +84,11 @@
 	  <li>Milk chocolate: sugar, cocoa butter, cocoa liquor, milk or milk powder, and vanilla</li>
 	  <li>White chocolate: sugar, cocoa butter, milk or milk powder, and vanilla</li>
 	  </ul>
-	  <img src="./images/Chocomixer.jpg" alt="Chocolate Mixing" class="img-fluid rounded-circle" style="width:50%">
-		<h5>Chocolate melanger mixing raw ingredients</h5><br>
 	  <div>
 	  Usually, an emulsifying agent, such as soy lecithin, is added, though a few manufacturers prefer to exclude this ingredient for purity reasons and to remain GMO-free, sometimes at the cost of a perfectly smooth texture. Some manufacturers are now using PGPR, an artificial emulsifier derived from castor oil that allows them to reduce the amount of cocoa butter while maintaining the same mouthfeel.<br><br>The texture is also heavily influenced by processing, specifically conching (see below). The more expensive chocolate tends to be processed longer and thus have a smoother texture and mouthfeel, regardless of whether emulsifying agents are added.<br><br>Different manufacturers develop their own "signature" blends based on the above formulas, but varying proportions of the different constituents are used. The finest, plain dark chocolate couvertures contain at least 70% cocoa (both solids and butter), whereas milk chocolate usually contains up to 50%. High-quality white chocolate couvertures contain only about 35% cocoa butter.<br><br>Producers of high-quality, small-batch chocolate argue that mass production produces bad-quality chocolate. Some mass-produced chocolate contains much less cocoa (as low as 7% in many cases), and fats other than cocoa butter. Vegetable oils and artificial vanilla flavor are often used in cheaper chocolate to mask poorly fermented and/or roasted beans.<br><br>In 2007, the Chocolate Manufacturers Association in the United States, whose members include Hershey, Nestlé, and Archer Daniels Midland, lobbied the Food and Drug Administration (FDA) to change the legal definition of chocolate to let them substitute partially hydrogenated vegetable oils for cocoa butter, in addition to using artificial sweeteners and milk substitutes. Currently, the FDA does not allow a product to be referred to as "chocolate" if the product contains any of these ingredients.<br><br>In the EU a product can be sold as chocolate if it contains up to 5% vegetable oil, and must be labelled as "family milk chocolate" rather than "milk chocolate" if it contains 20% milk.<br><br>According to Canadian Food and Drug Regulations, a "chocolate product" is a food product that is sourced from at least one "cocoa product" and contains at least one of the following: "chocolate, bittersweet chocolate, semi-sweet chocolate, dark chocolate, sweet chocolate, milk chocolate, or white chocolate". A "cocoa product" is defined as a food product that is sourced from cocoa beans and contains "cocoa nibs, cocoa liquor, cocoa mass, unsweetened chocolate, bitter chocolate, chocolate liquor, cocoa, low-fat cocoa, cocoa powder, or low-fat cocoa powder".
 	  </div>
-	  <br>
-	  <h3>Conching</h3>
-	  <div>
-	  The penultimate process is called conching. A conche is a container filled with metal beads, which act as grinders. The refined and blended chocolate mass is kept in a liquid state by frictional heat. Chocolate prior to conching has an uneven and gritty texture. The conching process produces cocoa and sugar particles smaller than the tongue can detect, hence the smooth feel in the mouth. The length of the conching process determines the final smoothness and quality of the chocolate. High-quality chocolate is conched for about 72 hours, and lesser grades about four to six hours. After the process is complete, the chocolate mass is stored in tanks heated to about 45 to 50 °C (113 to 122 °F) until final processing.
-	  </div>
 	  <img src="./images/Chocofountain.jpg" alt="Chocolate Fountain" style="width:25%">
-		<h5>Fountain chocolate is made with high levels of cocoa butter, allowing it to flow gently over a chocolate fountain to serve as dessert fondue.</h5>
+		<h5>Fountain chocolate is made with high levels of cocoa butter, allowing<br>it to flow gently over a chocolate fountain to serve as dessert fondue.</h5>
 	  <br>
 	  <h3>Tempering</h3>
 	  <div>
@@ -146,7 +157,7 @@
 	  Chocolate is very sensitive to temperature and humidity. Ideal storage temperatures are between 15 and 17 °C (59 and 63 °F), with a relative humidity of less than 50%. If refrigerated or frozen without containment, chocolate can absorb enough moisture to cause a whitish discoloration, the result of fat or sugar crystals rising to the surface. Various types of "blooming" effects can occur if chocolate is stored or served improperly.<br><br>Chocolate bloom is caused by storage temperature fluctuating or exceeding 24 °C (75 °F), while sugar bloom is caused by temperature below 15 °C (59 °F) or excess humidity. To distinguish between different types of bloom, one can rub the surface of the chocolate lightly, and if the bloom disappears, it is fat bloom. Moving chocolate between temperature extremes, can result in an oily texture. Although visually unappealing, chocolate suffering from bloom is safe for consumption and taste unaffected. Bloom can be reversed by retempering the chocolate or using it for any use that requires melting the chocolate.<br><br>Chocolate is generally stored away from other foods, as it can absorb different aromas. Ideally, chocolates are packed or wrapped, and placed in proper storage with the correct humidity and temperature. Additionally, chocolate is frequently stored in a dark place or protected from light by wrapping paper. The glossy shine, snap, aroma, texture, and taste of the chocolate can show the quality and if it was stored well.
 	  </div>
 	  <img src="./images/chocostore.jpg" alt="Chocolate Store" style="width:50%">
-		<h5>Packaged chocolate in the Ghirardelli Chocolate Company is stored in controlled conditions</h5>
+		<h5>Packaged chocolate in the Ghirardelli Chocolate Company is stored in controlled conditions</h5>	
   </div>
 </body>
 </html>
