Added table style layout component

--- a/chocolateproduction.html
+++ b/chocolateproduction.html
@@ -95,7 +95,7 @@
 	  The final process is called tempering. Uncontrolled crystallization of cocoa butter typically results in crystals of varying size, some or all large enough to be clearly seen with the naked eye. This causes the surface of the chocolate to appear mottled and matte, and causes the chocolate to crumble rather than snap when broken. The uniform sheen and crisp bite of properly processed chocolate are the result of consistently small cocoa butter crystals produced by the tempering process.<br><br>The fats in cocoa butter can crystallize in six different forms (polymorphous crystallization). The primary purpose of tempering is to assure that only the best form is present. The six different crystal forms have different properties.
 	  </div>
 	  <br>
-	  <table style="width:100%">
+	  <table style="width:100%" class="table table-hover table-striped">
 	    <style>
 	      table, th, td {
 	        border: 1px solid black;
